<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/toolbar_black"
    android:gravity="center">

    <ImageView
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:src="@drawable/tv_icon"
        android:layout_marginVertical="20sp"
        android:contentDescription="@string/login_icon_content" />

    <EditText
        android:layout_width="200sp"
        android:layout_height="40sp"
        android:hint="@string/email_login_hint"
        android:textColor="@color/toolbar_white"
        android:textColorHint="@color/faded_dark_grey"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:backgroundTint="@android:color/darker_gray"
        android:id="@+id/login_fragment_email_input"/>

    <EditText
        android:layout_width="200sp"
        android:layout_height="40sp"
        android:hint="@string/password_login_hint"
        android:textColor="@color/toolbar_white"
        android:textColorHint="@color/faded_dark_grey"
        android:maxLines="1"
        android:inputType="textPassword"
        android:backgroundTint="@android:color/darker_gray"
        android:id="@+id/login_fragment_password_input"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:backgroundTint="@android:color/darker_gray"
        android:layout_marginVertical="20sp"
        app:cornerRadius="45sp"
        android:text="@string/log_in_btn"
        android:textColor="@color/toolbar_black"
        android:id="@+id/login_fragment_submit_button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_up_link"
        android:textColor="@android:color/holo_blue_light"
        android:id="@+id/login_fragment_signup_link_text"/>

</LinearLayout>