<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/toolbar_black"
    tools:context=".activities.SignupActivity">

    <include layout="@layout/back_btn_toolbar"
        android:id="@+id/signup_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:id="@+id/signup_activity_profile_image"
            android:src="@drawable/default_profile_image"
            android:layout_gravity="center"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            app:civ_border_width="5sp"
            app:civ_border_color="@color/toolbar_white"/>

        <EditText
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:hint="@string/username_login_hint"
            android:textColor="@color/toolbar_white"
            android:textColorHint="@color/faded_dark_grey"
            android:backgroundTint="@android:color/darker_gray"
            android:maxLines="1"
            android:inputType="text"
            android:id="@+id/signup_activity_username_input" />

        <EditText
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:hint="@string/email_login_hint"
            android:textColor="@color/toolbar_white"
            android:textColorHint="@color/faded_dark_grey"
            android:backgroundTint="@android:color/darker_gray"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:id="@+id/signup_activity_email_input"/>

        <EditText
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:hint="@string/password_login_hint"
            android:textColor="@color/toolbar_white"
            android:textColorHint="@color/faded_dark_grey"
            android:backgroundTint="@android:color/darker_gray"
            android:maxLines="1"
            android:inputType="textPassword"
            android:id="@+id/signup_activity_password_input"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:backgroundTint="@android:color/darker_gray"
            android:layout_marginVertical="20sp"
            app:cornerRadius="45sp"
            android:text="@string/sign_up_btn"
            android:textColor="@color/toolbar_black"
            android:id="@+id/signup_activity_submit_btn"/>

    </LinearLayout>

</LinearLayout>