<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.MediaDetails"
    android:background="@color/toolbar_black"
    android:orientation="vertical">

    <include layout="@layout/back_btn_toolbar"
        android:id="@+id/media_details_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/poster_item"
                android:id="@+id/media_details_poster"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20sp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/toolbar_white"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:text="@string/media_details_summery_title"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="20sp"
                        android:id="@+id/media_details_summery"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20sp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/toolbar_white"
                            android:textStyle="bold"
                            android:textSize="25sp"
                            android:text="@string/media_details_reviews_title"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="25sp"
                            android:id="@+id/media_details_average_rating"/>

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:id="@+id/media_details_review_recycler"
                        android:layout_marginBottom="20sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/toolbar_white"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:text="@string/add_your_own_review_title"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="100sp"
                        android:gravity="start|top"
                        android:textColor="@color/toolbar_white"
                        android:textColorHint="@color/faded_dark_grey"
                        android:hint="@string/media_details_review_content_hint"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine"
                        android:backgroundTint="@android:color/darker_gray"
                        android:id="@+id/media_details_review_content"
                        android:scrollbars="vertical"
                        android:background="@drawable/rounded_background"
                        android:padding="10sp"/>
                    
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RatingBar
                            android:layout_width="wrap_content"
                            android:layout_height="50sp"
                            android:numStars="5"
                            android:scaleX=".8"
                            android:scaleY=".8"
                            android:stepSize="0.5"
                            android:id="@+id/media_details_review_rating"/>

                        <com.google.android.material.button.MaterialButton
                            android:layout_width="130sp"
                            android:layout_height="50sp"
                            android:backgroundTint="@android:color/darker_gray"
                            app:cornerRadius="45sp"
                            android:text="@string/submit_btn_label"
                            android:textColor="@color/toolbar_black"
                            android:id="@+id/signup_activity_submit_btn"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>